--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p class="close-popup">x</p>
             <h2>Изменить привычку</h2>
                 <input type="text" id="book-title-edit" placeholder="Название привычки" required />
-                <input type="text" id="book-author-edit" placeholder="Статус" required />
+                <input type="text" id="book-author-edit" placeholder="Статус (выполнено/не выполнено)" required />
                 <select id="book-genre-edit" required>
                     <option value="">Отметить как</option>
                     <option value="Fiction">Выполнено</option>
